# thrift-backpressure-demo

./: README.md
socialNetwork/: .dockerignore  Dockerfile  README.md  docker-compose.yml  social_network.thrift
socialNetwork/config/: service-config.json
socialNetwork/docker/rload/: .dockerignore  Cargo.toml  Dockerfile  gen_trace.py  test.py
socialNetwork/docker/rload/src/: generator.rs  luascript.rs  main.rs  workload.rs
socialNetwork/docker/thrift-microservice-deps/cpp/: Dockerfile
socialNetwork/gen-cpp/: ComposePostService.cpp  ComposePostService.h  ComposePostService_server.skeleton.cpp  TextService.cpp  TextService.h  TextService_server.skeleton.cpp  social_network_types.cpp  social_network_types.h
socialNetwork/gen-lua/: social_network_ComposePostService.lua  social_network_TextService.lua  social_network_ttypes.lua
socialNetwork/nginx-web-server/conf/: nginx.conf
socialNetwork/nginx-web-server/lua-scripts/wrk2-api/post/: compose.lua
socialNetwork/scripts/: compose-post.lua  locustfile.py
socialNetwork/src/: CMakeLists.txt  ThriftClient.h  utils_thrift.h
socialNetwork/src/ComposePostService/: CMakeLists.txt  ComposePostHandler.h  ComposePostService.cpp
socialNetwork/src/TextService/: CMakeLists.txt  TextHandler.h  TextService.cpp
