[package]
name = "rload"
version = "0.3.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
tokio = { version = "1", features = ["full"] }
reqwest = "0.11"
rand = "0.8"
clap = { version = "3", features = ["derive"] }
log = "0.4"
env_logger = "0.8"
mlua = { version = "0.7", features = ["luajit", "send"] }
serde_json = "1"
hdrhistogram = "7"
rand_distr = "0.4"
csv = "1"
